src/css/taxi.css
/* * COLOR Basics */
:root {
  --white: #fff;
  --black: #000;
  --black-shadow: rgba(0,0,0,0.1);
}
/* * TaxiJs Palette */
:root {
  --taxi-yellow: rgb(255, 221, 87);
  --taxi-yellow-shadow: rgba(255,221,87,0.3);
}
/* * COLOR Palette Synthwave */
:root {
  --synthwave-yellow: rgb(255, 211, 25);
  --synthwave-orange: rgb(255, 144, 31);
  --synthwave-red: rgb(255, 41, 117);
  --synthwave-pink: rgb(242, 34, 255);
  --synthwave-purple: rgb(140, 30, 255);
}
/* * Theming */
:root {
  --bg-1: var(--white);
  --bg-2: var(--grey1);
  --border-1: var(--taxi-yellow);
  --border-shadow: var(--taxi-yellow-shadow);
  --text-1: var(--black);
  --text-2: var(--grey6);
}

/* * Layout */
:root {
  --taxi-height: 100vh;
}

/* * Sizing */
taxi.is-fullheight {
  --taxi-height: 100vh;
}
taxi.is-large {
  --taxi-height: 80vh;
}
taxi.is-medium{
  --taxi-height: 60vh;
}
taxi.is-small{
  --taxi-height: 20vh;
}

/* * Default Input Theme*/
input.taxi {
  width: 100%;
  height: 100%;
  background: var(--bg-1);
  box-sizing: border-box;
  padding: 0.3rem;
  border-color:var(--border-1);
}
/* * Centering direct children when --border-radius is set*/
taxi div {
  width: calc(100% - var(--border-radius));
  transform: translateX(calc(var(--border-radius) / 2));
}
/* * Adds overlay. Instead of moving everything further down. */
taxi.is-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  margin-top: 2rem;
  height: var(--taxi-height);
  overflow: auto;
}
input.taxi:focus{
  /* //TODO How to remove outline? */
  outline: none !important;
  box-shadow: 0 0 0 .125em var(--border-shadow);
  border:1px solid var(--border-1);
}

/* * Synthwave Input Theme */
/* Feel Free To Add Themes And Do This Properly */
/* I encourage you to, this would be amazing, having a synthwave theme or a duotone theme */

/* * TaxiJs Theme */
taxi .taxi-card {
  background: var(--bg-1);
  color: #000;
  font-size: 2rem;
  border: none;
  border: 2px solid;
  border-color: var(--border-1);
  padding-left: 0.3rem;
  cursor: pointer;
}
/* * Removing Scrollbar */
taxi:empty {
  overflow: hidden;
}
/* * Styling Scrollbar */
taxi::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  background-color: #f5f5f5;
}
taxi::-webkit-scrollbar {
  width: 12px;
  background-color: #f5f5f5;
  transform: translateX(calc(var(--border-radius) / 2));
  transform: translateX(calc(var(--border-radius) / 2));
}
taxi::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #555;
}
/* * Selecting */
taxi .taxi-card:hover {
  background: var(--border-1);
}
taxi .is-selected {
  background: var(--border-1);
}

